add the logo to manifiest, delete folder asset with screenshot

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -398,6 +398,10 @@ button.btnP{
     justify-content: center;
   }
 }
+/*.accordion>.card>.card-header{
+  background-color:#95d5b2;
+}*/
+
 
 @media screen and (max-width: 768px) {
   .card {
